# aws-scripts

./: Makefile  README.md  pyproject.toml
aws_scripts/: __init__.py
aws_scripts/ec2/: __init__.py  get_instances_by_tags.py  modify_instance_user_data.py  modify_instance_user_data_by_tags.py  start_instances_by_tags.py  stop_instances_by_tags.py
aws_scripts/ec2/instance/: __init__.py  get_name.py
aws_scripts/helpers/: __init__.py  encrypt.py  get_file_content.py
tests/: test__ec2__get_instances_by_tag.py  test__ec2__modify_instances_attribute.py  test__ec2__start_instance_by_tags.py  test__ec2__stop_instance_by_tags.py  test__helpers__encrypt.py
